# voproof

./: .gitignore  <Plug>_  Cargo.toml  run_tests.sh  test_aliases.sh  test_result.txt  test_result_mt.txt
benches/: marlin_bench.rs  r1cs_bench.rs
src/: error.rs  lib.rs  main.rs
src/cs/: hpr.rs  mod.rs  pov.rs  r1cs.rs
src/cs/circuit/: fan_in_two.rs  mod.rs
src/kzg/: data_structures.rs  mod.rs
src/scripts/: latex_builder.py  main.py  optimized_compiler.py  pc_protocol.py  pov_protocols.py  rust.py  rust_builder.py  smvp_protocols.py  vector_symbol.py  zksnark.py
src/scripts/compiler/: pc_protocol.py  piop.py  vo2piop.py  vo_protocol.py  zksnark.py
src/scripts/compiler/builder/: rust.py
src/scripts/compiler/symbol/: coeff_map.py  poly.py  util.py  vector.py
src/snarks/: mod.rs  template.rs  voproof_hpr.rs  voproof_pov.rs  voproof_pov_prover_efficient.rs  voproof_r1cs.rs  voproof_r1cs_prover_efficient.rs
src/tools/: mod.rs
tests/: groth16_test.rs  hpr_test.rs  marlin_test.rs  plonk_test.rs  pov_test.rs  r1cs_test.rs
tests/utils/: mod.rs
