[package]
name = "voproof"
version = "0.1.0"
edition = "2018"
description = "The rust implementation of the VOProof zkSNARK."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-serialize = { version = "^0.3.0", default-features = false, features = [ "derive" ] }
ark-poly-commit = "0.3.0"
ark-poly = {version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features=["curve"]}
ark-bls12-377 = { version = "^0.3.0", default-features = false, features=["curve"]}
ark-std = { version = "^0.3.0", default-features = false }
ark-ff = { version = "^0.3.0", default-features = false }
derivative = { version = "2", features = [ "use_core" ] }
sha2 = "0.9.6"
