[package]
name = "voproof"
version = "0.2.0"
edition = "2021"
description = "The rust implementation of the VOProof zkSNARK."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-serialize = { version = "^0.3.0", default-features = false, features = [ "derive" ] }
ark-poly-commit = "0.3.0"
ark-poly = {version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features=["curve"]}
ark-bls12-377 = { version = "^0.3.0", default-features = false, features=["curve"]}
ark-std = { version = "^0.3.0", default-features = false }
ark-ff = { version = "^0.3.0", default-features = false }
ark-relations = "^0.3.0"
derivative = { version = "2", features = [ "use_core" ] }
sha2 = "0.9.6"
ark-marlin = "0.3.0"
blake2 = "0.9"
rayon = {version = "1", optional = true}

[features]
default = ["std", "parallel"]
std = ["ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-std/std", "ark-relations/std", "ark-serialize/std"]
print-trace = ["ark-std/print-trace"]
parallel = ["std", "ark-ff/parallel", "ark-ec/parallel", "ark-poly/parallel", "ark-std/parallel", "rayon"]
